<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_mainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.smart.lock.activity.MainActivity" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="51dp"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

    <LinearLayout
        android:id="@+id/layout_mainTab"
        android:layout_width="fill_parent"
        android:layout_height="51dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/top_line" >

        <RelativeLayout
            android:id="@+id/layout_mainTab_home"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="tabHomeClick" >

            <ImageView
                android:id="@+id/img_mainTab_home"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/btn_buttom_first" />

            <TextView
                android:id="@+id/txt_mainTab_home"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:layout_below="@+id/img_mainTab_home"
                android:text="@string/first_page"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/layout_mainTab_like"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="tabLikeClick" >

            <ImageView
                android:id="@+id/img_mainTab_like"
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/btn_buttom_two" />

            <TextView
                android:id="@+id/txt_mainTab_like"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/img_mainTab_like"
                android:layout_alignParentLeft="true"
                android:gravity="center"
                android:text="@string/like"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/layout_mainTab_my"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:onClick="tabMyClick" >

            <ImageView
                android:id="@+id/img_mainTab_my"
                android:layout_width="fill_parent"
                android:layout_height="28dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="5dp"
                android:src="@drawable/btn_buttom_four" />

            <ImageView
                android:id="@+id/img_my_red_spot"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="4dp"
                android:visibility="invisible"
                android:src="@drawable/icon_new_notice" />

            <TextView
                android:id="@+id/txt_mainTab_my"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_below="@+id/img_mainTab_my"
                android:gravity="center"
                android:layout_centerHorizontal="true"
                android:text="@string/my"
                android:textColor="@color/black"
                android:textSize="12sp" />
        </RelativeLayout>
    </LinearLayout>


    <TextView
        android:id="@+id/layout_tabSplit"
        android:layout_width="fill_parent"
        android:layout_height="1px"
        android:visibility="gone"
        android:background="@color/maintabline"
        android:layout_above="@id/layout_mainTab">
    </TextView>
</RelativeLayout>